fixL community detail profiles wrap

--- a/FE/a101/src/pages/Community.css
+++ b/FE/a101/src/pages/Community.css
@@ -95,6 +95,8 @@
   display: flex;
   gap: 5px;
   margin-left: 2vw;
+  flex-wrap: wrap;
+  max-width: 50vw;
 }
 
 .community-body-for-test:nth-child(1) {
